--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "contents-docs"]
 	path = contents-docs
 	url = https://github.com/WisetrackerTechteam/guide.git
+[submodule "https:/github.com/WisetrackerTechteam/guide.git"]
+	path = https:/github.com/WisetrackerTechteam/guide.git
+	url = https://github.com/WisetrackerTechteam/docs.git
