--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mdx-js/react": "1.4.4",
     "@mdx-js/tag": "0.20.3",
     "antd": "3.24.0",
+    "core-js": "^3.6.4",
     "gatsby": "2.13.65",
     "gatsby-cli": "2.7.44",
     "gatsby-image": "2.2.17",
